# -

./: .gitignore  1.files  CMakeLists.txt  CMakeUserPresets.json  main.cpp
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: 1.config.2F9C9D3F552CF149.idx  CMakeCXXCompilerId.cpp.648E8D5C4078DA68.idx  MainWindow.cpp.7DCB1C735F331377.idx  MainWindow.h.F676757464F04FD8.idx  __msvc_iter_core.hpp.3D3FFD5E24FC4019.idx  __stddef_header_macro.h.8EAC0A5558E3F445.idx  __stddef_max_align_t.h.2660D9FB68212D14.idx  __stddef_null.h.2043287841AA6AB0.idx  __stddef_nullptr_t.h.4742F3CC86C90912.idx  __stddef_offsetof.h.129191FFCEF094B7.idx  __stddef_ptrdiff_t.h.88F10378214817DF.idx  __stddef_size_t.h.A117C9A05E770800.idx  __stddef_wchar_t.h.BD67A01B0FA9B724.idx  adcintrin.h.DB292C0EDFAA1238.idx  cfloat.01951C334570BFD8.idx  climits.D5F12A05616FEC59.idx  corecrt.h.A7EAE1036C2AD980.idx  corecrt_math.h.B529233865104920.idx  corecrt_memory.h.921AF4C79D961632.idx  corecrt_search.h.2B26E674B691DC81.idx  corecrt_wconio.h.66913AC211024781.idx  corecrt_wio.h.7DE1D4FA7C2B56A1.idx  corecrt_wstdio.h.16704FC6623AA872.idx  corecrt_wstdlib.h.F3387DAB7030D77D.idx  corecrt_wstring.h.86319785C05ABCE9.idx  corecrt_wtime.h.19B4AE2847B88C8C.idx  crtdbg.h.D7EBA690B39B3C02.idx  crtdefs.h.CE8FA7FDC4DF7A00.idx  cstddef.76ECB023A95418BC.idx  cstdint.EA5F831DE17348D6.idx  cstdio.88A5098144DB6607.idx  cstdlib.6E6293D9EED261A3.idx  cstring.614B85B99C87051F.idx  cwchar.6B9B6A79CF09F4D7.idx  eh.h.8F6B339BBD14B871.idx  exception.0DCD3179859C8FD5.idx  (+37 more)
MainWindow/: MainWindow.cpp  MainWindow.h
